--- a/config/taxi.yml
+++ b/config/taxi.yml
@@ -16,4 +16,4 @@ min_epsilon: 0.05
 decay_rate: 0.005
 
 # Save video directory
-video_out_dir: "./replay_taxi.mp4"
+video_out_dir: "./results/replay_taxi.mp4"
